пишу текст и добавляю слайды

--- a/index.html
+++ b/index.html
@@ -17,6 +17,31 @@
         <h2 class="shout">ReactiveX</h2>
     </section>
 
+    <section class="slide">
+        <h2>
+            Задачи и проблемы
+        </h2>
+        <ol>
+            <li class="next">Websocket</li>
+            <li class="next">Неохота ждать</li>
+            <li class="next">Пускай рисуются а запросы ждут</li>
+            <li class="next">Если все пропало</li>
+            <li class="next">Если запросов слишком много</li>
+            <li class="next">Потоки по требованию</li>
+        </ol>
+    </section>
+
+    <section class="slide">
+        <h2>
+            Первое решение
+        </h2>
+        <ul>
+            <li>State Machine</li>
+            <li>События State Machine</li>
+        </ul>
+        <p class="next"><img src="pictures/authstate.png" alt="" width="60%"></p>
+    </section>
+
     <section class="slide" id="defs">
         <h2>
             <img src="pictures/Rx_Logo_S.png">
@@ -35,6 +60,16 @@
         <p class="note">или Наблюдатель</p>
         <p>
             <img src="pictures/observer-pattern.png">
+        </p>
+    </section>
+
+    <section class="slide">
+        <h2>Iterator</h2>
+        <p>
+            <img src="pictures/itarable_1.png" width="60%">
+        </p>
+        <p>
+            <img src="pictures/observable_1.png" width="60%">
         </p>
     </section>
 
