--- a/index.html
+++ b/index.html
@@ -56,32 +56,6 @@
     </section>
 
     <section class="slide">
-        <h2>Observer</h2>
-        <p class="note">или Наблюдатель</p>
-        <p>
-            <img src="pictures/observer-pattern.png">
-        </p>
-    </section>
-
-    <section class="slide">
-        <h2>Iterator</h2>
-        <p>Это такой паттерн который позволяет последовательно обходить структуры данных.</p>
-        <p class="next">
-            <img src="pictures/iterator_pattern.png" width="100%">
-        </p>
-    </section>
-
-    <section class="slide">
-        <h2>Iterator, что взято</h2>
-        <p>
-            <img src="pictures/itarable_1.png" width="60%">
-        </p>
-        <p>
-            <img src="pictures/observable_1.png" width="60%">
-        </p>
-    </section>
-
-    <section class="slide">
         <h2>Место observable</h2>
         <table>
             <tr>
@@ -102,17 +76,56 @@
         </table>
     </section>
 
+    <section class="slide">
+        <h2>Observer</h2>
+        <p class="note">или Наблюдатель от банды 4-х</p>
+        <p>
+            <img src="pictures/observer-pattern.png">
+        </p>
+    </section>
+
+    <section class="slide">
+        <h2>Iterator</h2>
+        <p>Это такой паттерн который позволяет последовательно обходить структуры данных.</p>
+        <p class="next">
+            <img src="pictures/iterator_pattern.png" width="100%">
+        </p>
+    </section>
+
+    <section class="slide" id="iterator-what">
+        <h2>Iterator, что взято</h2>
+        <ol>
+            <li class="next">возможность источника сообщить потребителям что данных больше нет</li>
+            <li class="next">возможность источника сообщить потребителям об ошибке</li>
+        </ol>
+        <p class="next">Все операции которые можно делать на Итератором можно делать и над Observable</p>
+
+        <style>
+            #iterator-what ol { font-size: 0.9em; }
+        </style>
+    </section>
+
+    <section class="slide">
+        <h2>Iterator, что взято</h2>
+        <p>
+            <img src="pictures/itarable_1.png" width="60%">
+        </p>
+        <p>
+            <img src="pictures/observable_1.png" width="60%">
+        </p>
+    </section>
+
     <section class="slide" id="rx-first-example">
         <h2>Могущество в операторах</h2>
         <pre>
-            <code class="next">const searchText$ = <mark>fromEvent</mark>(document.querySelector("input")).pipe(</code>
+            <code class="next">const searchUsers$ = <mark>fromEvent</mark>(document.querySelector("input"), "change")</code>
+            <code class="next">.pipe(</code>
             <code class="next">    <mark>map</mark>(event => event.target.value),</code>
             <code class="next">    <mark>debounceTime</mark>(400),</code>
-            <code class="next">    <mark>distinctUntilChanged</mark>()</code>
-            <code class="next">);</code>
-            <code class="next">const users$ = searchText$.pipe(</code>
+            <code class="next">    <mark>distinctUntilChanged</mark>(),</code>
             <code class="next">    <mark>switchMap</mark>(search => getJson(`/users/?q=${search}`))</code>
-            <code class="next">).subscribe();</code>
+            <code class="next">);</code>
+            <code class="next">searchUsers$.subscribe();</code>
         </pre>
 
         <style>
