--- a/index.html
+++ b/index.html
@@ -49,7 +49,12 @@
         <blockquote>
             <p>Комбинация лучших идей взятых из паттернов <mark>Observer</mark>, <mark>Iterator</mark> и функционального программирования</p>
         </blockquote>
-
+        <p class="next">
+            Можно рассматривать как отдельный шаблон проектирования.
+        </p>
+        <p class="next">
+            Имеет массу реализаций на всевозможных языках.
+        </p>
         <style>
             #defs img { width: 60px; vertical-align: bottom; }
         </style>
